--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-/* Global styles */
 body {
   background-color: #f5f5f5;
   color: #333;
@@ -50,7 +49,7 @@ nav a:hover {
 /* Main content styles */
 section {
   margin: 50px auto;
-  max-width: 800px;
+  max-width: 1500px;
   padding: 20px;
   text-align: justify;
   background-color: #fff;
@@ -70,14 +69,22 @@ h2 {
   margin: 20px 0;
 }
 
-ul {
-  list-style: none;
-  margin: 20px 0;
-  padding: 0;
+.c-section {
+  display: flex;
+  justify-content: space-around;
 }
 
-ul li {
-  margin-bottom: 10px;
+.c-card {
+  border: 10px solid #f7941d;
+  padding: 20px;
+  margin: 5px;
+  text-align: center;
+  width: 50%; 
+}
+
+.c-card a {
+  text-decoration: none;
+  color: #333;
 }
 
 /* Footer styles */
