--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
   background-color: #f5f5f5;
   color: #333;
   line-height: 1.6;
-  font-family: Arial, sans-serif;
+  font-family:  "Poppins", Sans-serif;
   font-weight: normal;
 }
 
@@ -85,6 +85,20 @@ h2 {
 .c-card a {
   text-decoration: none;
   color: #333;
+}
+.c-card ul {
+  list-style-type: none; 
+  padding: 0; 
+}
+
+.c-card li {
+  margin-bottom: 10px; 
+}
+
+@media screen and (max-width: 600px) {
+  .c-card {
+    width: 100%; /* Make cards take full width on smaller screens */
+  }
 }
 
 /* Footer styles */
