--- a/example-name-portfolio/assets/styles.css
+++ b/example-name-portfolio/assets/styles.css
@@ -1,10 +1,147 @@
-button,.button{appearance:none;background:var(--brand);border:0;color:var(--paper);font-weight:600;line-height:2;min-width:var(--fingertip);padding:var(--spacing-1) var(--spacing-3) 0;text-transform:uppercase;transition:all .3s ease-in-out}button:hover,button:focus,.button:hover,.button:focus{background:var(--ink);color:var(--paper)}
-:root{--paper: hsla(244, 28%, 88%, 0.9);--ink: hsla(244, 16%, 17%, 0.95);--shadow: hsla(244, 16%, 42%, 0.087);--brand: hsla(0, 79%, 63%, 0.9)}@media(prefers-color-scheme: dark){:root{--paper: hsla(244, 28%, 8%, 0.95);--ink: hsla(244, 16%, 80%, 0.95);--shadow: hsla(244, 28%, 8%, 0.99);--brand: hsla(0, 79%, 63%, 0.9)}}
-section p{line-height:1.5;max-width:55ch}h3[class]{margin:0 auto 0 0}ul[class],li[class]{margin:0;padding:0}
-:root{--font-display: "Raleway", system-ui, sans-serif;--font-body: system-ui, sans-serif}
-svg{height:100%;width:auto;min-width:var(--fingertip)}img{width:100%;height:100%;max-width:100%;object-fit:cover}picture{height:auto;overflow:hidden}
-html{background:var(--paper);color:var(--ink)}html,body{scroll-behavior:smooth;font-family:var(--font-body)}body{display:grid;margin:auto;min-height:100vh;gap:var(--gap);max-width:var(--container)}body>header{font-family:var(--font-display);backdrop-filter:blur(var(--spacing-2));display:flex;justify-content:space-between;align-items:center;position:sticky;top:0;z-index:1}nav ul{display:flex;list-style:none;gap:var(--gap)}
-a,a:any-link{color:currentColor;text-decoration:none;border-bottom:2px solid rgba(0,0,0,0);transition:border-color ease-in-out .3s}a:hover,a:focus{color:var(--brand);border-color:currentColor;outline:none}
-.project{background-color:var(--paper);box-shadow:var(--shadow) 0 0 var(--spacing-3) 0,0 var(--spacing-3) var(--spacing-4) var(--shadow);display:grid;grid-template:"picture picture picture" var(--box) "....... ....... ......." var(--gap) "....... details ......." min-content "....... ....... ......." var(--gap)/var(--gap) var(--box) var(--gap)}.project__picture{grid-area:picture}.project__details{grid-area:details}.project__heading{display:inline-block}
-.showcase{display:flex;flex-flow:row wrap;gap:var(--gap)}
-:root{--spacing-1: 0.125rem;--spacing-2: 0.5rem;--spacing-3: 0.75rem;--spacing-4: 1rem;--spacing-5: 1.25rem;--spacing-6: 3rem;--gap: var(--spacing-5);--container: clamp(280px, calc(100vw - calc(var(--gap) * 2)), 1180px);--box: clamp(280px, 50vw + 2px, 530px);--fingertip: 48px}
+button,
+.button {
+  appearance: none;
+  background: var(--brand);
+  border: 0;
+  color: var(--paper);
+  font-weight: 600;
+  line-height: 2;
+  min-width: var(--fingertip);
+  padding: var(--spacing-1) var(--spacing-3) 0;
+  text-transform: uppercase;
+  transition: all 0.3s ease-in-out;
+}
+button:hover,
+button:focus,
+.button:hover,
+.button:focus {
+  background: var(--ink);
+  color: var(--paper);
+}
+:root {
+  --paper: hsla(244, 28%, 88%, 0.9);
+  --ink: hsla(244, 16%, 17%, 0.95);
+  --shadow: hsla(244, 16%, 42%, 0.087);
+  --brand: hsla(0, 79%, 63%, 0.9);
+}
+@media (prefers-color-scheme: dark) {
+  :root {
+    --paper: hsla(244, 28%, 8%, 0.95);
+    --ink: hsla(244, 16%, 80%, 0.95);
+    --shadow: hsla(244, 28%, 8%, 0.99);
+    --brand: hsla(0, 79%, 63%, 0.9);
+  }
+}
+section p {
+  line-height: 1.5;
+  max-width: 55ch;
+}
+h3[class] {
+  margin: 0 auto 0 0;
+}
+ul[class],
+li[class] {
+  margin: 0;
+  padding: 0;
+}
+:root {
+  --font-display: "Raleway", system-ui, sans-serif;
+  --font-body: system-ui, sans-serif;
+}
+svg {
+  height: 100%;
+  width: auto;
+  min-width: var(--fingertip);
+}
+img {
+  width: 100%;
+  height: 100%;
+  max-width: 100%;
+  object-fit: cover;
+}
+picture {
+  height: auto;
+  overflow: hidden;
+}
+html {
+  background: var(--paper);
+  color: var(--ink);
+}
+html,
+body {
+  scroll-behavior: smooth;
+  font-family: var(--font-body);
+}
+body {
+  display: grid;
+  margin: auto;
+  min-height: 100vh;
+  gap: var(--gap);
+  max-width: var(--container);
+}
+body > header {
+  font-family: var(--font-display);
+  backdrop-filter: blur(var(--spacing-2));
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: sticky;
+  top: 0;
+  z-index: 1;
+}
+nav ul {
+  display: flex;
+  list-style: none;
+  gap: var(--gap);
+}
+a,
+a:any-link {
+  color: currentColor;
+  text-decoration: none;
+  border-bottom: 2px solid rgba(0, 0, 0, 0);
+  transition: border-color ease-in-out 0.3s;
+}
+a:hover,
+a:focus {
+  color: var(--brand);
+  border-color: currentColor;
+  outline: none;
+}
+.project {
+  background-color: var(--paper);
+  box-shadow: var(--shadow) 0 0 var(--spacing-3) 0,
+    0 var(--spacing-3) var(--spacing-4) var(--shadow);
+  display: grid;
+  grid-template:
+    "picture picture picture" var(--box)
+    "....... ....... ......." var(--gap)
+    "....... details ......." min-content
+    "....... ....... ......." var(--gap)
+    / var(--gap) var(--box) var(--gap);
+}
+.project__picture {
+  grid-area: picture;
+}
+.project__details {
+  grid-area: details;
+}
+.project__heading {
+  display: inline-block;
+}
+.showcase {
+  display: flex;
+  flex-flow: row wrap;
+  gap: var(--gap);
+}
+:root {
+  --spacing-1: 0.125rem;
+  --spacing-2: 0.5rem;
+  --spacing-3: 0.75rem;
+  --spacing-4: 1rem;
+  --spacing-5: 1.25rem;
+  --spacing-6: 3rem;
+  --gap: var(--spacing-5);
+  --container: clamp(280px, calc(100vw - calc(var(--gap) * 2)), 1180px);
+  --box: clamp(280px, 50vw + 2px, 530px);
+  --fingertip: 48px;
+}
