Add most of my important projects
* Add most of my important projects or apps I worked on
* Add their descriptions for people to understand the purpose and how I contributed
* Have a white background to make it simple and elegant
* Add a picture of the apps
* Make the titles center
* Make the app look good on for mobile phones and tablets

--- a/input.css
+++ b/input.css
@@ -26,13 +26,19 @@ body {
   gap: var(--gap);
   max-width: var(--container);
 }
-a,
-a:any-link {
-  color: currentColor;
+a {
+  color: red;
   text-decoration: none;
-  border-bottom: 2px solid transparent;
-  transition: border-color ease-in-out 0.3s;
+  border-bottom: 2px solid blue;
+  /* transition: border-color ease-in-out 0.3s; */
 }
+
+/* a {
+    color: red;
+    text-decoration: none;
+    border-bottom: 1px solid green;
+} */
+
 a:hover,
 a:focus {
   color: var(--brand);
